--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -15,6 +15,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Get current varsion
+        id: version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_SHA | cut -c1-7)
+
+      - name: Get Applications Version
+        id: app_version
+        run: echo ::set-output name=APP_VERSION::$(cat VERSION)
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -29,7 +37,7 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=raw,value=01
+            type=raw,value=${{ steps.app_version.outputs.APP_VERSION }}
 
       - name: Build and Push to Docker Hub
         id: docker_build
