--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -15,10 +15,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Get Applications Version
-        id: app_version
-        run: echo ::set-output name=APP_VERSION::$(cat VERSIONS)
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -33,7 +29,7 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=raw,value=${{ steps.app_version.outputs.APP_VERSION }}
+            type=raw,value=v$(cat VERSIONS)
 
       - name: Build and Push to Docker Hub
         id: docker_build
