--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -12,32 +12,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Get Application VERSION
+      id: app_version
+      run: echo $(cat VERSIONS)
 
-      - name: Docker Metadata for Image
-        id: docker_meta
-        uses: docker/metadata-action@v5
-        with:
-          images: 1renatodevops/docker-dockerhub
-          flavor: |
-            latest=false
-          tags: |
-            type=raw,value=v$(cat VERSIONS)
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push to Docker Hub
-        id: docker_build
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64
+    - name: Docker Metadata for Image
+      id: docker_meta
+      uses: docker/metadata-action@v5
+      with:
+        images: 1renatodevops/docker-dockerhub
+        flavor: |
+          latest=false
+        tags: |
+          type=raw,value=v${{ steps.app_version.outputs.stdout }}
+
+    - name: Build and Push to Docker Hub
+      id: docker_build
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: ${{ steps.docker_meta.outputs.tags }}
+        labels: ${{ steps.docker_meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64
