--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -17,7 +17,9 @@ jobs:
 
     - name: Get Application VERSION
       id: app_version
-      run: echo $(cat VERSIONS)
+      run: |
+        VERSIONS=$(cat VERSIONS)
+        echo "VERSIONS=$VERSIONS" >> "$GITHUB_ENV"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -33,7 +35,7 @@ jobs:
         flavor: |
           latest=false
         tags: |
-          type=raw,value=v${{ steps.app_version.outputs.stdout }}
+          type=raw,value=v${{ env.VERSIONS }}
 
     - name: Build and Push to Docker Hub
       id: docker_build
