fix(Infra): :fire: Edit review tag version

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -35,7 +35,7 @@ jobs:
         flavor: |
           latest=false
         tags: |
-          type=raw,value=v${{ env.VERSIONS }}
+          type=raw,value=$(echo v$VERSIONS)
 
     - name: Build and Push to Docker Hub
       id: docker_build
