--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -17,9 +17,7 @@ jobs:
 
     - name: Get Application VERSION
       id: app_version
-      run: |
-        VERSIONS=$(cat VERSIONS)
-        echo "VERSIONS=$VERSIONS" >> "$GITHUB_ENV"
+      run: VERSIONS=$(cat VERSIONS) | echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -35,7 +33,7 @@ jobs:
         flavor: |
           latest=false
         tags: |
-          type=raw,value=$(echo v$VERSIONS)
+          type=raw,value=${{ env.VERSIONS}}
 
     - name: Build and Push to Docker Hub
       id: docker_build
