--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Get Application VERSION
       id: app_version
-      run: VERSIONS=$(cat VERSIONS) | echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
+      run: VERSIONS=$(cat VERSIONS)
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -33,7 +33,7 @@ jobs:
         flavor: |
           latest=false
         tags: |
-          type=raw,value=${{ env.VERSIONS}}
+          type=raw,value=${{ env.app_version.outputs.VERSIONS }}
 
     - name: Build and Push to Docker Hub
       id: docker_build
