--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -19,7 +19,7 @@ jobs:
       id: app_version
       run: |
         VERSIONS=$(cat VERSIONS)
-        echo "VERSIONS=${VERSIONS}" >> $GITHUB_ENV
+        echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
