--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -15,11 +15,20 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Get Application VERSION
       id: app_version
       run: |
-        VERSIONS=$(cat ./VERSIONS)
+        VERSIONS=$(cat VERSIONS | tr -d '\n')
+        echo "VERSIONS=$VERSIONS"
         echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
+
+    - name: Exibir a versão do aplicativo
+      run: echo "A version lida é ${{ env.VERSIONS }}"
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
