--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -16,6 +16,15 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Set up SSH Key
+      run: |
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ?home/gitdeploy/.ssh/id_rsa
+        chmod 600 /home/gitdeploy/.ssh/id_rsa
+
+    - name: Add server to known_hosts
+      run: |
+        ssh-keygen -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -24,20 +33,20 @@ jobs:
 
     - name: Pull Docker Image from Docker Hub
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
+        ssh -i /home/gitdeploy/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
         "docker pull 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}"
 
     - name: Stop and Remove Existing Container
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
+        ssh -i /home/gitdeploy/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
         "docker stop my_app || true && docker rm my_app || true"
 
     - name: Run Docker Container
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
+        ssh -i /home/gitdeploy/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
         "docker run -d --name my_app -p 80:80 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}"
 
     - name: Verify Deployment
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
+        ssh -i /home/gitdeploy/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} \
         "docker ps | grep my_app"
