--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -21,9 +21,14 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > /home/gitdeploy/.ssh/id_rsa
         chmod 600 /home/gitdeploy/.ssh/id_rsa
 
-    # - name: Add server to known_hosts
-    #   run: |
-    #     ssh-keygen -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+    - name: Print Key
+      run: |
+        whoami
+        echo /home/gitdeploy/.ssh/id_rsa
+
+    - name: Add server to known_hosts
+      run: |
+        ssh-keygen -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
