--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Add server to known_hosts
       run: |
-        ssh-keygen -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+        ssh-keygen -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
