--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -16,14 +16,14 @@ jobs:
       with:
         fetch-depth: 0
 
-    # - name: Set up SSH Key
-    #   run: |
-    #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > /home/gitdeploy/.ssh/id_rsa
-    #     chmod 600 /home/gitdeploy/.ssh/id_rsa
+    - name: Set up SSH Key
+      run: |
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > /home/gitdeploy/.ssh/id_rsa
+        chmod 600 /home/gitdeploy/.ssh/id_rsa
 
-    # - name: Add server to known_hosts
-    #   run: |
-    #     ssh-keygen -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+    - name: Add server to known_hosts
+      run: |
+        ssh-keygen -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
