--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -21,9 +21,17 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > /home/gitdeploy/.ssh/id_rsa
         chmod 600 /home/gitdeploy/.ssh/id_rsa
 
+    - name: Create SSH key
+      env:
+        SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private.key
+        sudo chmod 400 private.key
+
     - name: Add server to known_hosts
       run: |
-        ssh-keygen -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+        eval `ssh-agent -s`
+        ssh-add private.key -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
