--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -31,7 +31,8 @@ jobs:
     - name: Add server to known_hosts
       run: |
         eval `ssh-agent -s`
-        ssh-add private.key -H -f ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+        ssh-add private.key 
+        ssh-keyscan -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
