--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -40,18 +40,6 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Get Application VERSION
-      id: app_version
-      run: |
-        VERSIONS=$(cat VERSIONS | tr -d '\n')
-        echo "VERSIONS=$VERSIONS"
-        echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
-
     - name: Pull Docker Image from Docker Hub
       run: |
         whoami > WHOAMI
@@ -59,7 +47,7 @@ jobs:
         eval `ssh-agent -s`
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" <<'ENDSSH'
-        docker pull 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}
+        docker pull 1renatodevops/docker-dockerhub:0.1.5
         ENDSSH
 
     - name: Stop and Remove Existing Container
@@ -74,7 +62,7 @@ jobs:
         eval `ssh-agent -s`
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" \
-        "docker run -d --name nginx -p 80:80 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}"
+        "docker run -d --name nginx -p 80:80 1renatodevops/docker-dockerhub:0.1.5"
 
     - name: Verify Deployment
       run: |
