--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -30,6 +30,14 @@ jobs:
     - name: Exibir a versão do aplicativo
       run: echo "A version lida é ${{ env.VERSIONS }}"
 
+    - name: Install Dependencies to React App
+      run: |
+        yarn install --production --frozen-lockfile
+
+    - name: Build React App
+      run: |
+        yarn build
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
