--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -1,66 +1,64 @@
-name: Build and Push Docker Image
-
+name: "[CI] Pipeline"
 on:
+  workflow_dispatch:
   push:
     branches:
-    - main
+      - main
   pull_request:
 
+permissions:
+  id-token: write
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
-  build-image:
-    name: Build and Push Docker Image
+  build:
     runs-on: ubuntu-latest
-
+    outputs:
+      NEW_VERSION: ${{ steps.semantic_release.outputs.new_release_version }}
+      TAG: ${{ steps.generate_tag.outputs.sha }}
     steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - uses: actions/checkout@v4
 
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Setup Node Version
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.12.2
+          cache: yarn
 
-    - name: Get Application VERSION
-      id: app_version
-      run: |
-        VERSIONS=$(cat VERSIONS | tr -d '\n')
-        echo "VERSIONS=$VERSIONS"
-        echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
+      - name: Semantic Release
+        id: semantic_release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-    - name: Exibir a versão do aplicativo
-      run: echo "A version lida é ${{ env.VERSIONS }}"
+      - name: Generate TAG
+        id: generate_tag
+        run: |
+          SHA=$(echo $GITHUB_SHA | head -c7)
+          echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-    # - name: Install Dependencies to React App
-    #   run: |
-    #     yarn install --production --frozen-lockfile
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
 
-    # - name: Build React App
-    #   run: |
-    #     yarn build
+      - run: |
+          echo "${{ needs.build.outputs.NEW_VERSION }}"
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login Docker HUB
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Docker Metadata for Image
-      id: docker_meta
-      uses: docker/metadata-action@v5
-      with:
-        images: 1renatodevops/docker-dockerhub
-        flavor: |
-          latest=false
-        tags: |
-          type=raw,value=${{ env.VERSIONS }}
-
-    - name: Build and Push to Docker Hub
-      id: docker_build
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: ${{ steps.docker_meta.outputs.tags }}
-        labels: ${{ steps.docker_meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: |
+            jvictorsm/jvictorsm:${{ needs.build.outputs.NEW_VERSION }} 
+            jvictorsm/jvictorsm:${{ needs.build.outputs.TAG }} 
