fix: Update Docker image repository name
The Docker image repository name has been updated to `1renatodevops/docker-dockerhub` to reflect the correct ownership and project.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -60,5 +60,5 @@ jobs:
         with:
           push: true
           tags: |
-            jvictorsm/jvictorsm:${{ needs.build.outputs.NEW_VERSION }} 
-            jvictorsm/jvictorsm:${{ needs.build.outputs.TAG }} 
+            1renatodevops/docker-dockerhub:${{ needs.build.outputs.NEW_VERSION }} 
+            1renatodevops/docker-dockerhub:${{ needs.build.outputs.TAG }} 
