--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -39,15 +39,22 @@ jobs:
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+      - name: echo Outputs
+        run: |
+          echo "${{ steps.semantic_release.outputs.new_release_version }}"
+          echo "${{ steps.generate_tag.outputs.sha }}"
+
+
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
 
-      - run: |
+      - name: echo Outputs
+        run: |
           echo "${{ needs.build.outputs.NEW_VERSION }}"
+          echo "${{ needs.build.outputs.TAG }}"
 
       - name: Login Docker HUB
         uses: docker/login-action@v3
