feat: Add support for branch-specific releases
This commit expands the release configuration to include branches like `homolog`, `feat/*`, and `fix/*`, enabling the generation of releases for these branches as well.  This allows for more flexible release strategies, enabling separate releases for features and bug fixes during development.

--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,8 @@
 {
   "branches": [
-    "develop","homolog","main","feat/*","fix/*"
+    "develop",
+    "homolog",
+    "main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
@@ -28,5 +30,8 @@
       }
     ],
     "@semantic-release/github"
-  ]
+  ],
+  "ci": {
+    "prereleaseTrigger": "pull_request"
+  }
 }
