feat: Implement prerelease versioning based on branch names
Enables prerelease versioning for features and fixes by dynamically generating versions based on branch names. This allows for easier identification and management of pre-release builds.

- `feat/*` branches will generate prerelease versions like `1.0.0-feat.1`
- `fix/*` branches will generate prerelease versions like `1.0.0-fix.1`

--- a/.releaserc
+++ b/.releaserc
@@ -2,7 +2,15 @@
   "branches": [
     "develop",
     "homolog",
-    "main"
+    "main",
+    {
+      "name": "feat/*",
+      "prerelease": true
+    },
+    {
+      "name": "fix/*",
+      "prerelease": true
+    }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
