fix: Streamline Docker image build workflow
Simplify the Docker image build workflow by removing unnecessary steps and streamlining the release process. This reduces complexity and improves efficiency.

--- a/.releaserc
+++ b/.releaserc
@@ -1,16 +1,6 @@
 {
   "branches": [
-    "develop",
-    "homolog",
-    "main",
-    {
-      "name": "feat/*",
-      "prerelease": true
-    },
-    {
-      "name": "fix/*",
-      "prerelease": true
-    }
+    "develop","homolog","main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
@@ -38,8 +28,5 @@
       }
     ],
     "@semantic-release/github"
-  ],
-  "ci": {
-    "prereleaseTrigger": "pull_request"
-  }
+  ]
 }
