--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -3,8 +3,9 @@ on:
   workflow_dispatch:
   push:
     branches:
+      - main
+      - homolog
       - develop
-  pull_request:
 
 permissions:
   id-token: write
@@ -13,19 +14,10 @@ permissions:
   pull-requests: write
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-    outputs:
-      NEW_VERSION: ${{ steps.semantic_release.outputs.new_release_version }}
-      TAG: ${{ steps.generate_tag.outputs.sha }}
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Node Version
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.12.2
-          cache: yarn
 
       - name: Semantic Release
         id: semantic_release
@@ -39,22 +31,6 @@ jobs:
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-      - name: echo Outputs
-        run: |
-          echo "${{ steps.semantic_release.outputs.new_release_version }}"
-          echo "${{ steps.generate_tag.outputs.sha }}"
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: echo Outputs
-        run: |
-          echo "${{ needs.build.outputs.NEW_VERSION }}"
-          echo "${{ needs.build.outputs.TAG }}"
-
       - name: Login Docker HUB
         uses: docker/login-action@v3
         with:
@@ -66,5 +42,5 @@ jobs:
         with:
           push: true
           tags: |
-            1renatodevops/docker-dockerhub:${{ needs.build.outputs.NEW_VERSION }} 
-            1renatodevops/docker-dockerhub:${{ needs.build.outputs.TAG }}
+            1renatodevops/docker-dockerhub:${{ steps.semantic_release.outputs.new_release_version }} 
+            1renatodevops/docker-dockerhub:${{ steps.generate_tag.outputs.sha }}
