feat: Improve CI/CD workflows
Refactor workflow names to better reflect their purpose. Add a new workflow for automatic deployment to the server. Improve the pull request workflow to include quality gate checks.

This change standardizes workflow naming conventions, automates deployment, and increases the reliability of the project by introducing a quality gate.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Semantic Release
+      - name: Generate Semantic Release
         id: semantic_release
         uses: cycjimmy/semantic-release-action@v4
         env: 
