--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -1,9 +1,12 @@
-name: Deploy to On-Premise Ubuntu Server
+name: "[CD] Deploy to Server"
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - feat/*
+      - main
+      - homolog
+      - develop
 
 jobs:
   deploy:
@@ -31,8 +34,11 @@ jobs:
     - name: Add server to known_hosts
       run: |
         eval `ssh-agent -s`
-        ssh-add private.key 
+        ssh-add private.key
         ssh-keyscan -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
+
+    - name: List files
+      run: ls -la
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
