feat: Implement automatic versioning
This commit introduces automatic versioning for the application. It updates the CI/CD pipeline to capture the version number from a dedicated `VERSION` file, which is then dynamically updated by Semantic Release during the release process. This ensures consistent versioning across releases and simplifies the manual process of tracking versions.

--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,6 @@
 {
   "branches": [
-    "develop","homolog","main"
+    "develop", "homolog", "main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
@@ -23,10 +23,17 @@
         "assets": [
           "CHANGELOG.md",
           "package.json",
-          "yarn.lock"
+          "yarn.lock",
+          "VERSION"
         ]
       }
     ],
-    "@semantic-release/github"
+    "@semantic-release/github",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "echo ${nextRelease.version} > VERSION"
+      }
+    ]
   ]
 }
