--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -2,11 +2,11 @@ name: "[CD] Deploy to Server"
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - homolog
-      - develop
+  # push:
+  #   branches:
+  #     - main
+  #     - homolog
+  #     - develop
 
 jobs:
   deploy:
@@ -37,8 +37,12 @@ jobs:
         ssh-add private.key
         ssh-keyscan -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
-    - name: List files
-      run: ls -la
+    - name: Get Application VERSION
+      id: app_version
+      run: |
+        VERSIONS=$(cat VERSIONS | tr -d '\n')
+        echo "VERSIONS=$VERSIONS"
+        echo "VERSIONS=$VERSIONS" >> $GITHUB_ENV
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
