feat: Add VERSION file for release tracking
Adds a new file, `VERSIONS`, to hold the latest release version. This will be used by the build process to track releases and potentially other scripts in the future.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -42,5 +42,8 @@ jobs:
         with:
           push: true
           tags: |
-            1renatodevops/docker-dockerhub:${{ steps.semantic_release.outputs.new_release_version }} 
+            1renatodevops/docker-dockerhub:${{ steps.semantic_release.outputs.new_release_version }}
             1renatodevops/docker-dockerhub:${{ steps.generate_tag.outputs.sha }}
+
+      - name: New VERSION file
+        run: echo ${{ steps.semantic_release.outputs.new_release_version }} > VERSIONS
