Fix: Remove unnecessary VERSIONS file and update release workflow
Removed the `VERSIONS` file, which was no longer necessary.
Also updated the release workflow to use the version from `package.json`.
This ensures that the version is always consistent and up-to-date.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -46,4 +46,6 @@ jobs:
             1renatodevops/docker-dockerhub:${{ steps.generate_tag.outputs.sha }}
 
       - name: New VERSION file
-        run: echo ${{ steps.semantic_release.outputs.new_release_version }} > VERSIONS
+        run: |
+          version=$(jq -r ‘.version’ “./package.json”) 
+          echo $version
