fix: Use package.json version for Docker image tag
The Docker image build workflow now uses the version from `package.json` for the image tag instead of a hardcoded string. This ensures that the image tag always reflects the current version of the project.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -47,5 +47,5 @@ jobs:
 
       - name: New VERSION file
         run: |
-          version=$(jq -r '.version' "./package.json") 
+          version=$(jq -r '.version' "./package.json") > VERSIONS
           echo $version 
