feat: Add VERSION file generation
This commit introduces a step in the Docker image build workflow to generate a `VERSION` file containing the version number extracted from `package.json`. This ensures that the version information is readily available within the Docker image for use during deployment and other operations.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -47,5 +47,7 @@ jobs:
 
       - name: New VERSION file
         run: |
+          cat package.json
           version=$(jq -r '.version' "./package.json") > VERSIONS
           echo $version 
+          cat VERSIONS
