feat: Add jq installation for image deployment
This change ensures the `jq` command is available on the deployment server, which is necessary to extract the application version from the Docker image tag.

--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -37,6 +37,9 @@ jobs:
         ssh-add private.key
         ssh-keyscan -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
+    - name: Install jq
+      run: apt install -y jq
+
     - name: Get Application VERSION
       id: app_version
       run: |
