--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -60,7 +60,7 @@ jobs:
         eval `ssh-agent -s`
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" <<'ENDSSH'
-        docker pull 1renatodevops/docker-dockerhub:0.1.6
+        docker pull 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}
         ENDSSH
 
     - name: Stop and Remove Existing Container
@@ -75,7 +75,7 @@ jobs:
         eval `ssh-agent -s`
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" \
-        "docker run -d --name nginx -p 80:80 1renatodevops/docker-dockerhub:0.1.6"
+        docker run -d --name nginx -p 3000:3000 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}
 
     - name: Verify Deployment
       run: |
