--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -2,11 +2,7 @@ name: "[CD] Deploy to Server"
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - homolog
-      - develop
+  workflow_call:
 
 jobs:
   deploy:
