fix: Integrate docker image build workflow
This commit introduces a new workflow to automate the build and push of docker images for the project. It fetches the current version from `package.json` and integrates the `github-to-dockerhub` workflow to streamline the release process.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -51,3 +51,7 @@ jobs:
           version=$(jq -r '.version' "./package.json") > VERSIONS
           echo $version 
           cat VERSIONS
+
+  cd:
+    needs: [release]
+    uses: renatoDev0ps/github-to-dockerhub/.github/workflows/docker-image-deploy.yaml@develop
