--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Add server to known_hosts
       run: |
-        eval 'ssh-agent -s'
+        eval "$(ssh-agent -s)"
         ssh-add private.key
         ssh-keyscan -H ${{ secrets.SERVER_IP }} >> /home/gitdeploy/.ssh/known_hosts
 
@@ -53,7 +53,7 @@ jobs:
       run: |
         whoami > WHOAMI
         echo "WHOAMI=$(cat WHOAMI)"
-        eval 'ssh-agent -s'
+        eval "$(ssh-agent -s)"
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" <<'ENDSSH'
         docker pull 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}
@@ -61,21 +61,21 @@ jobs:
 
     - name: Stop and Remove Existing Container
       run: |
-        eval 'ssh-agent -s'
+        eval "$(ssh-agent -s)"
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" \
         "docker stop nginx || true && docker rm nginx || true"
 
     - name: Run Docker Container
       run: |
-        eval 'ssh-agent -s'
+        eval "$(ssh-agent -s)"
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" \
         docker run -d --name nginx -p 3000:3000 1renatodevops/docker-dockerhub:${{ env.VERSIONS }}
 
     - name: Verify Deployment
       run: |
-        eval 'ssh-agent -s'
+        eval "$(ssh-agent -s)"
         ssh-add private.key 
         sshpass -p "${{ secrets.PSWD }}" ssh -v -i private.key -o StrictHostKeyChecking=no "${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }}" \
         "docker ps | grep nginx"
