--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -3,7 +3,8 @@ name: "[CD] Deploy to Server"
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["[CI] Pipeline"]
+    workflows: 
+      - "[CI] Pipeline"
     types:
       - completed
 
