--- a/.github/workflows/docker-image-deploy.yaml
+++ b/.github/workflows/docker-image-deploy.yaml
@@ -1,12 +1,16 @@
-name: "[CD] Deploy to Server"
+name: (CD) Deploy to Server
 
 on:
   workflow_dispatch:
   workflow_run:
     workflows: 
-      - CI
+      - (CI) Pipeline
     types:
       - completed
+  push:
+    branches:
+      - main
+      - homolog
 
 jobs:
   deploy:
